(library
 (name chaos)
 (modules chaos stats local sample state packet sched combine)
 (public_name chaos)
 (libraries mirage-crypto-rng duration slice.bstr ipaddr fmt ptime logs)
 (foreign_stubs
  (language c)
  (names regress)))

(library
 (name tscclock)
 (modules tscclock)
 (public_name chaos.tscclock)
 (libraries ptime)
 (foreign_stubs
   (language c)
   (names tscclock)))
